# private-perps

./: .gitignore  .gitpod.yml  Anchor.toml  Arcium.toml  Cargo.toml  README.md  package.json  tsconfig.json  tsconfig.scripts.json
.devcontainer/: devcontainer.json
app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: EncryptionStatus.tsx  Layout.tsx  MarketList.tsx  PositionTable.tsx  PriceChart.tsx  TradingPanel.tsx
app/src/hooks/: useMarketData.ts  usePositions.ts
app/src/idl/: README.md  stealth_perps.json
app/src/lib/: arcium-stub.ts  arcium.ts  constants.ts  encryption.ts  programInstructions.ts
app/src/pages/: HomePage.tsx  TradingPage.tsx
artifacts/: circuits_hash.txt
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/stealth-perps/: Cargo.toml
programs/stealth-perps/src/: lib.rs
programs/stealth_perps/: Cargo.toml
programs/stealth_perps/src/: lib.rs
scripts/: init-comp-defs.ts
server/: index.js  package-lock.json  package.json
tests/: stealth-perps.js  stealth-perps.ts
