[package]
name = "stealth-perps"
version = "0.1.0"
description = "Private perpetuals on Solana with Arcium MPC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stealth_perps"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-anchor = "0.9.7"
arcium-client = { version = "0.9.7", default-features = false }
arcium-macros = "0.9.7"
